@@ -1,3 +1,10 @@
+CHANGES IN VERSION xxx
+-----------------------
+
+    o Added plotting of individual comparisons in classification and permutation plots.
+    o Added df argument (degrees of freedom, passed to smooth.spline) to projection and 	permute function. This allows some degree of control over how linear or crooked 	the principal curve is drawn. NOTE: you must (!) give the same df value to the 		projection and permute functions for your results to be valid and, at the moment, 	there is no automated checking that this is the case.
+    o The classification step now uses a mew method for separation scoring and fixes a 		previous bug which could occur when group sizes were not equal. This change is 		reflected in the vignette.
+
 CHANGES IN VERSION 1.2.0
 -----------------------
 
